fdo#45962: fix context menu key yanking cursor out of header/footer

For the "context menu" key VCL synthesizes a cursor position that is the
center of the window, hence likely to be in the document body.
When SwEditWin::Command calls lcl_CheckHeaderFooterClick, it then moves
the document view cursor; prevent that by only calling that for actual
mouse events.  (regression from a6176612ff1a6a142a68964b2c0834d28125fc45)